// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleInfoCards Test Rendering should render footer when it is cd module 1`] = `
<div>
  <h1
    class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--padding-top-xlarge"
  >
    common.purpose.howToProceed
  </h1>
  <div
    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card card infoCard cd"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
      >
        <span
          class="bp3-icon StyledProps--main commandApproval"
          data-icon="command-approval"
        >
          <svg
            height="40"
            viewBox="0 0 14 14"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.5 3.8c-.1-.1-.4-.2-.6-.2-.5 0-.9.4-.9.8 0 .3.1.5.3.6L8 6.8c.2.1.4.2.7.2s.5-.1.6-.2l4.4-4.3c.2-.2.3-.4.3-.6 0-.5-.4-.9-.9-.9-.2 0-.5.1-.6.2L8.7 4.9zm4.7 2.6c0 .2.1.4.1.6 0 2.9-2.4 5.2-5.2 5.2S1.8 9.9 1.8 7 4.1 1.8 7 1.8c.7 0 1.4.1 2 .4L10.3.9C9.3.3 8.2 0 7 0 3.1 0 0 3.1 0 7s3.1 7 7 7 7-3.1 7-7c0-.7-.1-1.4-.3-2.1z"
              fill="#4d5969"
            />
          </svg>
        </span>
        <div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
            >
              common.purpose.cd.1stGen.title
            </p>
          </div>
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
      >
        common.purpose.cd.1stGen.description
      </p>
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-top-large"
      >
        <p
          class="StyledProps--font StyledProps--main footerTitle"
        >
          common.purpose.cd.supportedStack
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main enabled"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="app-aws-code-deploy"
            >
              <svg
                height="16"
                viewBox="0 0 28 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                >
                  <path
                    d="M4 26l-4-1.732V6.732L4 5z"
                    fill="#4B612C"
                  />
                  <path
                    d="M18 22.536L3 26V5l15 3.464z"
                    fill="#759C3E"
                  />
                  <path
                    d="M7 12.8l6.781-.8.219.2v6.6l-.219.2L7 18.2z"
                    fill="#4B612C"
                  />
                  <path
                    d="M28 11.25l-6.682.75L7 9.5 14.398 7z"
                    fill="#3C4929"
                  />
                  <path
                    d="M27 21.667L20.318 21 6 23.222 13.875 25z"
                    fill="#B7CA9D"
                  />
                  <path
                    d="M7 28.786L13.781 32 14 24.714 7 23z"
                    fill="#4B612C"
                  />
                  <path
                    d="M26 25.714L14 32v-7.633L26 21z"
                    fill="#759C3E"
                  />
                  <path
                    d="M7 3.214L14 0v7.286L7 9z"
                    fill="#4B612C"
                  />
                  <path
                    d="M27.25 18.667L13 20.3v-8.167L27.25 14zm0-7L13 8.167V.233l14.25 6.534z"
                    fill="#759C3E"
                  />
                </g>
              </svg>
            </span>
          </p>
          <p
            class="StyledProps--font StyledProps--main enabled"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="service-aws-lamda"
            >
              <svg
                height="16"
                viewBox="0 0 12 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M.3 11.1l.7.4.1-.2V2.6L.3 3z"
                  fill="#9d5025"
                />
                <path
                  d="M2.5 3l-1.4-.4v8.8l1.4-.3z"
                  fill="#f68536"
                />
                <path
                  d="M6.8 3.6l1-.5 3.3 1.3-.9.1z"
                  fill="#6b3a19"
                />
                <path
                  d="M6.8 10.4l1 .5 3.3-1.3-.9-.1z"
                  fill="#fbbf93"
                />
                <path
                  d="M7 9l1.7.2.1-.2V4.8L7 5.1zM1.9 2.2L3 1.6l.1.2v10.3l-.1.3-1.1-.5z"
                  fill="#9d5025"
                />
                <path
                  d="M5.2 11.7l-2.2.7V1.6l2.2.7z"
                  fill="#f68536"
                />
                <path
                  d="M4.3 13.1l1.7.8.2-.2V.4L6 .1 4.3 1zm5.8-8.6l.9-.1.1.1v5l-.1.2-.9-.1z"
                  fill="#9d5025"
                />
                <g
                  fill="#f68536"
                >
                  <path
                    d="M8.8 4.8v4.4L10.6 7z"
                  />
                  <path
                    d="M11 2.6L6 .1v13.8l5.7-2.9V3zm0 7.1l-3.3 1V3.4l3.3 1z"
                  />
                </g>
              </svg>
            </span>
          </p>
          <p
            class="StyledProps--font StyledProps--main enabled"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="main-service-ami"
            >
              <svg
                height="16"
                viewBox="0 0 12 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <mask
                  height="5"
                  id="main-service-ami_svg__a"
                  maskUnits="userSpaceOnUse"
                  width="6"
                  x="0"
                  y="0"
                >
                  <path
                    d="M0 0h6v5H0z"
                    fill="#fff"
                  />
                </mask>
                <mask
                  height="4.9"
                  id="main-service-ami_svg__b"
                  maskUnits="userSpaceOnUse"
                  width="5.7"
                  x="0"
                  y="0"
                >
                  <path
                    d="M0 0h5.7v5H0z"
                    fill="#fff"
                  />
                </mask>
                <mask
                  height="2"
                  id="main-service-ami_svg__c"
                  maskUnits="userSpaceOnUse"
                  width="11.5"
                  x="0"
                  y="0"
                >
                  <path
                    d="M0 0h11.5v2H0z"
                    fill="#fff"
                  />
                </mask>
                <path
                  d="M.1 0c.6.3 1.2.6 1.8.8 1.3.6 2.6 1.3 3.9 1.9.1.2.2.3.2.5v1.6c0 .1 0 .2-.1.2-1.8-.4-3.5-.9-5.3-1.3-.2 0-.4 0-.5-.2v-.3V.3C0 .2 0 .1.1 0"
                  fill="#fb862e"
                  mask="url(#main-service-ami_svg__a)"
                  transform="translate(5.634 .02)"
                />
                <path
                  d="M5.7 0v3.5c0 .1-.1.1-.2.1-1.7.5-3.4.9-5.1 1.3-.1 0-.3.1-.4 0V3s0-.1.2-.2C2 1.9 3.8 1 5.7 0c-.1 0 0 0 0 0"
                  fill="#a0501e"
                  mask="url(#main-service-ami_svg__b)"
                  transform="translate(.042 .02)"
                />
                <path
                  d="M.1 1.4C.9 1.2 1.8 1 2.6.8c1-.2 2-.5 3-.7h.1c.7 0 1.3.2 1.9.3 1.2.3 2.5.6 3.7.9.1 0 .2 0 .2.1-1.2.1-2.4.2-3.7.4-.6.1-1.3.2-2 .2-.4.1-.8 0-1.3-.1-1.2-.1-2.3-.2-3.5-.3-.3-.1-.6-.1-.9-.2-.1.1-.1.1 0 0-.1 0-.1 0 0 0"
                  fill="#6e3915"
                  mask="url(#main-service-ami_svg__c)"
                  transform="translate(0 3.55)"
                />
                <path
                  d="M8.7 8.6c0 .2-.1.2-.3.3-.8.1-1.7.3-2.5.4h-.1c-.1 0-.1-.1-.1-.2V6.2c0-.1 0-.2.1-.3.6 0 1.2.1 1.9.1.3 0 .6 0 .9.1.1 0 .2 0 .2.1.1.1.1.1.1.2v1.9c-.1.1-.1.3-.2.3"
                  fill="#fb862e"
                />
                <path
                  d="M5.7 5.9v3.5c-.6-.2-1.2-.3-1.9-.4-.3-.1-.6-.1-.9-.2-.1-.8 0-1.6 0-2.4 0-.1 0-.2.1-.2 0 0 .1 0 .1-.1.8-.1 1.6-.2 2.5-.2zM5.9 13.9c0 .1-.1.1-.1 0-.6-.3-1.1-.6-1.7-.9-.1-.1-.2-.1-.1-.2v-.6s-.1-.1-.1-.2V10.1c.1-.1.2-.1.3 0 .5.1.9.2 1.4.3.2 0 .3 0 .5.1.1.2.1.4.1.6v.8c0 .6-.1 1.2 0 1.8-.2.1-.2.1-.3.2"
                  fill="#a0501e"
                />
                <path
                  d="M5.9 13.9c0-.9 0-1.9.1-2.8 0-.2.1-.4 0-.6 0-.1.1-.1.1-.1.5-.1 1.1-.3 1.6-.5h.2c.1.2.1.3.1.3V12c0 .1 0 .2-.1.3v.1c.1.5-.1.7-.5.9-.5.1-1 .4-1.5.6"
                  fill="#fb862e"
                />
                <path
                  d="M9.6 6.2c.6.1 1.2.1 1.8.2.1 0 .1.1.1.2v1.7c0 .1 0 .1-.1.2-.6.1-1.3.2-1.9.3h-.1c.1-.3.1-.6.1-.9V6.6c.1-.2.1-.3.1-.4"
                  fill="#fb872e"
                />
                <path
                  d="M1.7 8.6c-.5 0-1-.2-1.5-.3-.1 0-.1-.1-.1-.1V6.4c0-.1 0-.1.1-.1.5 0 1-.1 1.5-.2.1.1.1.2.1.3v2c0 .1 0 .2-.1.2"
                  fill="#a0501e"
                />
                <g
                  fill="#fb862e"
                >
                  <path
                    d="M3.9 10.1v2.1c-.3 0-.6.2-.9.3-.1 0-.2.1-.3.1-.1-.1-.1-.1-.1-.2v-2.3-.2c0-.1.1-.1.1-.1.6-.1 1.1-.2 1.7-.3h.2v.3c-.1.1-.5.1-.7.3 0-.1 0-.1 0 0M10 11.5c.1.3-.1.5-.3.6-.3.1-.5.3-.8.4-.1 0-.1-.1-.1-.2v-.8-.3-1.4s0-.1.1-.1c.4-.1.7-.3 1.1-.3 0 .2 0 .2.1.3v1.6c0 .1-.1.2-.1.2M1.7 8.6V6.4v-.2h1.2v2.7c0-.2-.1-.2-.2-.2-.4-.1-.7 0-1-.1"
                  />
                </g>
                <path
                  d="M8.8 9.8v2.7c-.3-.1-.6-.2-.9-.2v-2.1-.2c-.5-.1-.9-.1-1.4-.3 0-.1-.1-.2.1-.2.7 0 1.3.2 2 .3z"
                  fill="#a0501c"
                />
                <path
                  d="M11.5 9.1c.1 0 .1 0 .1.1V11c0 .1 0 .1-.1.1-.4.1-.8.3-1.2.4h-.1V9.6v-.3c.1-.1.1-.1.2-.1.5 0 .8-.1 1.1-.1"
                  fill="#fb872e"
                />
                <path
                  d="M2.7 9.8v2.7l-.9-.6c-.2-.1 0-.3-.1-.5 0-.1-.1-.1-.1-.2V9.5l.1-.1c.4.2.7.2 1 .4"
                  fill="#a0501e"
                />
                <path
                  d="M9.6 6.2v2.4c0 .1-.1.1-.1.1-.3 0-.5 0-.8-.1 0-.8-.1-1.6 0-2.4z"
                  fill="#a1501e"
                />
                <path
                  d="M6.5 9.7c.5.1.9.2 1.3.3-.6.2-1.1.3-1.7.5-.1 0-.1 0-.2.1h-.3c-.6-.1-1.1-.3-1.7-.4-.1 0-.1 0-.2-.1.3-.1.7-.1 1-.2.6-.3 1.2-.4 1.8-.2"
                  fill="#fdbd8f"
                />
                <path
                  d="M1.7 9.5v1.9c-.2 0-.4.1-.7.1-.2 0-.2-.1-.2-.2v-.6-1.2-.3h.3c.5-.1 1.1-.1 1.6-.1.1.2 0 .2-.2.2-.2.1-.5.2-.8.2z"
                  fill="#fb862e"
                />
                <path
                  d="M.8 11.5l-.6-.3c-.1 0-.1-.1-.1-.2V9.2c0-.1.1 0 .1-.1.2 0 .4 0 .6.1.1 0 .2 0 .2.1v2c-.1.1-.1.2-.2.2"
                  fill="#a0501e"
                />
                <path
                  d="M10.4 9.3v2c0 .1 0 .2-.1.2H10V9.7c0-.1.1-.2-.1-.2-.3 0-.7-.1-1-.1-.1 0-.2 0-.2-.1 0-.2.1-.1.2-.1h1.3c0 .1.1 0 .2.1"
                  fill="#a1501c"
                />
                <path
                  d="M8.7 9.3c.3.1.7.1 1 .2.1 0 .2 0 .2.1-.4 0-.8.1-1.1.2-.8-.1-1.5-.2-2.2-.3.4-.1.9-.1 1.3-.2.3-.1.5 0 .8 0M1.7 9.5s-.1 0-.2-.1c.3 0 .7-.1 1-.1.1 0 .3.1.3-.2 0 .1.2.1.3.1.6-.1 1.1.1 1.6.1h.1c-.6.3-1.2.4-1.8.5h-.3c-.3-.1-.7-.2-1-.3"
                  fill="#fdbd8f"
                />
                <path
                  d="M.9 9.3c-.3-.1-.5-.2-.8-.2.2-.1.5-.1.7-.1.7-.1 1.3-.1 2 .1-.2.1-.4 0-.6.1-.5 0-.9.1-1.3.1zM10.4 9.3h-.2c-.1-.1-.2 0-.2 0H9.4c-.1-.1-.2 0-.2-.1.6-.2 1.2-.1 1.9-.1.2 0 .4 0 .6.1-.6 0-.9.1-1.3.1"
                  fill="#fdbd90"
                />
                <path
                  d="M.9 9.3v2c0 .1 0 .2.1.2-.1 0-.1.1-.2 0 .1 0 0-.1 0-.2.1-.7.1-1.3.1-2"
                  fill="#d58954"
                />
                <path
                  d="M8.8 12.5v-1.2c.1.3 0 .7 0 1v.2s0 .1 0 0"
                  fill="#f19754"
                />
                <path
                  d="M9.1 9.1c.1.1.2 0 .2.1h-.4c0-.1.1-.1.2-.1"
                  fill="#f9ceaf"
                />
                <path
                  d="M9.5 9.3c.1-.1.2-.1.2 0h-.2"
                  fill="#fad2b5"
                />
                <path
                  d="M9.9 9.2c.1 0 .2-.1.2.1 0 0-.1 0-.2-.1 0 .1 0 .1 0 0z"
                  fill="#f9d4ba"
                />
                <path
                  d="M9.9 9.2c0 .1 0 .1 0 0-.1.1-.1.1-.2 0z"
                  fill="#e1bea7"
                />
              </svg>
            </span>
          </p>
          <p
            class="StyledProps--font StyledProps--main enabled"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="app-kubernetes"
            >
              <svg
                height="16"
                viewBox="0 0 32 30"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                >
                  <path
                    d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                    fill="#326CE5"
                  />
                  <path
                    d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                    fill="#FFF"
                    stroke="#FFF"
                    stroke-width="0.25"
                  />
                </g>
              </svg>
            </span>
          </p>
          <p
            class="StyledProps--font StyledProps--main enabled"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="command-winrm"
            >
              <svg
                height="16"
                viewBox="0 0 14 11"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 0c-.2 0-.5 0-.7.2S2 .6 2 .9C1.3 3.8.7 6.7 0 9.7c0 .3 0 .6.2.9s.5.4.9.4H11c.3 0 .5-.1.7-.3s.3-.4.3-.6c.6-2.9 1.3-5.9 1.9-8.8.1-.3.1-.7-.1-.9s-.5-.4-.9-.4zm0 1h9.9v.1C12.3 4 11.6 7 11 9.9v.1H1v-.1C1.6 6.9 2.3 4 3 1c-.1 0 0 0 0 0zm1.8.5c-.3 0-.6.2-.7.4s-.1.6.1.9l2.4 2.6-3.8 2.7c-.2.2-.3.5-.3.7s.2.5.5.6.5.1.8-.1L8.3 6c.2-.1.3-.3.3-.5s-.1-.4-.2-.6l-3-3.2c-.2-.1-.4-.2-.6-.2zM6.7 8c-.2 0-.5.1-.6.4-.1.2-.1.5 0 .7s.4.4.7.4h2c.3 0 .5-.1.7-.4.1-.2.1-.5 0-.8-.2-.2-.5-.3-.8-.3z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </p>
          <p
            class="StyledProps--font StyledProps--main enabled"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="service-pivotal"
            >
              <svg
                height="16"
                viewBox="0 0 14 11"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.2 8.5c0-2.2-1.8-4-4-4s-4 1.8-4 4c0 .4 0 .7.1 1.1 0 .1.1.3.1.4h1.3c.1 0 .2-.1.2-.2v-.1c0-.1-.1-.2-.1-.2-.6-1.4 0-2.9 1.4-3.5S6 6 6.6 7.4c.3.7.3 1.5 0 2.1 0 .1-.1.2-.1.3s0 .2.1.2H7.8c.1 0 .1 0 .1-.1.1-.1.1-.2.1-.4.1-.3.2-.7.2-1z"
                  fill="#008774"
                />
                <path
                  d="M8.7 3.1c-2.8 0-5.1 2.3-5.1 5.1 0 .4.1.9.2 1.3 0 .1.1.3.1.4.1.1.1.1.2.1h1.1c.1 0 .2-.1.2-.2v-.1c0-.1-.1-.2-.1-.3-.7-2 .3-4.1 2.3-4.8s4 .4 4.7 2.4c.3.8.3 1.7 0 2.6 0 .1-.1.2-.1.3s0 .2.1.2H13.5c.1 0 .1 0 .1-.1s.1-.3.1-.4c.7-2.7-.9-5.5-3.6-6.2-.5-.2-.9-.3-1.4-.3z"
                  fill="#00ae9e"
                />
                <path
                  d="M11.6 4.5C11.6 2 9.5 0 7.1 0 4.6 0 2.5 2 2.5 4.5v.4h1.3C3.7 3.1 5 1.6 6.7 1.4c1.8-.2 3.3 1.1 3.5 2.9v.4c0 .6-.3 1.2-.6 1.7-.1.1 0 .2 0 .2h1.3c.1 0 .1 0 .2-.1.3-.6.5-1.3.5-2z"
                  fill="#008774"
                />
              </svg>
            </span>
          </p>
          <p
            class="StyledProps--font StyledProps--main enabled"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="app-aws-lambda"
            >
              <svg
                height="16"
                viewBox="0 0 26 27"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.706 14.587a34419.9 34419.9 0 00-3.838 5.664 4042.86 4042.86 0 01-3.574 5.266.241.241 0 01-.17.099c-1.683-.015-3.367-.033-5.05-.055-.018 0-.037-.006-.074-.011a.902.902 0 01.047-.103l3.523-5.473 3.126-4.848c1.156-1.795 2.31-3.592 3.465-5.39.17-.265.348-.525.51-.795a.329.329 0 00.034-.238c-.31-.995-.628-1.986-.945-2.978-.135-.424-.277-.847-.404-1.274-.041-.137-.109-.179-.249-.178-1.058.004-2.109.003-3.164.003-.2 0-.2 0-.2-.198 0-1.3 0-2.6-.004-3.9 0-.144.047-.176.183-.176 2.123.003 4.247.003 6.37 0a.205.205 0 01.225.151 36080.34 36080.34 0 007.279 18.34c.405 1.02.814 2.042 1.216 3.066.047.124.097.148.223.11 1.113-.346 2.228-.681 3.34-1.027.14-.043.192-.014.235.125.38 1.196.767 2.389 1.151 3.583.013.041.023.083.039.14-.08.03-.154.063-.23.084-2.53.803-5.06 1.608-7.587 2.412-.12.038-.157-.003-.197-.105-.772-1.96-1.546-3.92-2.321-5.88l-2.277-5.754-.34-.866c-.018-.049-.043-.092-.08-.168l-.262.374z"
                  fill="#FA7E14"
                />
              </svg>
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card card infoCard selected cd Card--disabled"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
      >
        <span
          class="bp3-icon StyledProps--main cdMain"
          data-icon="cd-main"
        >
          <svg
            fill="none"
            height="40"
            viewBox="0 0 26 21"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M15.201 2.9a5.325 5.325 0 00-2.498 3.256l-.34 1.273 2.656.712.34-1.273a2.615 2.615 0 013.2-1.847 2.617 2.617 0 011.847 3.2 2.614 2.614 0 01-3.199 1.847l-.03-.008-7.673-2.057a5.325 5.325 0 00-4.069.535 5.325 5.325 0 00-2.497 3.256 5.328 5.328 0 00.536 4.07 5.328 5.328 0 003.256 2.499 5.325 5.325 0 004.069-.535 5.325 5.325 0 002.498-3.256l.34-1.274-2.656-.712-.34 1.273a2.614 2.614 0 01-3.2 1.847 2.617 2.617 0 01-1.847-3.2 2.604 2.604 0 011.218-1.585 2.604 2.604 0 011.98-.262l7.704 2.066a5.325 5.325 0 004.069-.535 5.325 5.325 0 002.497-3.257 5.329 5.329 0 00-.536-4.07 5.329 5.329 0 00-3.256-2.498 5.325 5.325 0 00-4.069.534z"
              fill="url(#cd-main_svg__paint0_linear)"
              fill-rule="evenodd"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="cd-main_svg__paint0_linear"
                x1="3.557"
                x2="8.848"
                y1="9.622"
                y2="18.787"
              >
                <stop
                  stop-color="#62F91F"
                />
                <stop
                  offset="1"
                  stop-color="#5EAA53"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
        <div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
            >
              common.purpose.cd.newGen.title
            </p>
          </div>
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
      >
        common.purpose.cd.newGen.description
      </p>
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-top-large"
      >
        <p
          class="StyledProps--font StyledProps--main footerTitle"
        >
          common.purpose.cd.supportedStack
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main enabled"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              data-icon="app-kubernetes"
            >
              <svg
                height="16"
                viewBox="0 0 32 30"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                >
                  <path
                    d="M15.94.023c-.228 0-.457 0-.685.229L4.512 5.28c-.457.229-.915.686-1.143 1.372L.626 18.08c-.229.457 0 1.143.229 1.6l.228.229 7.314 9.143c.458.457.915.685 1.6.685h11.886c.686 0 1.143-.228 1.6-.685l7.314-9.143c.458-.457.458-1.143.458-1.6L28.512 6.88c-.229-.685-.457-1.143-1.143-1.371L16.626.48c0-.228-.457-.457-.686-.457z"
                    fill="#326CE5"
                  />
                  <path
                    d="M15.94 3.909c-.457 0-.685.228-.685.686v2.057c0 .228-.229.228-.229.228v.229c-.457 0-.686 0-1.143.228-1.6.458-3.2 1.143-4.114 2.286l-.229-.228h-.457c-.228-.23-.457-.458-.914-.686l-.457-.457h-.229c-.228 0-.228-.229-.457-.229s-.457 0-.457.229c-.229.228-.229.685.228.914h.23c.228.229.456.229.456.229.457.228.686.457.914.685 0 0 .23.229.23.457l.228.229c-1.143 1.6-1.6 3.657-1.372 5.714h-.228l-.229.229c-.229 0-.686.228-1.143.228H4.97c-.457 0-.686.458-.457.686 0 .229.457.457.914.457h.229c.228 0 .457-.228.685-.228.457-.229.686-.229 1.143-.229.229 0 .229 0 .457.229h.229c.686 2.057 2.057 3.657 3.657 4.571l-.229.229v.457c-.228.228-.228.686-.685 1.143-.229.228-.229.228-.229.457v.228c-.228.458 0 .686.229.915.228.228.685 0 .914-.457v-.23c0-.228.229-.456.229-.685.228-.457.228-.914.457-1.143 0 0 .228 0 .228-.228l.229-.229c1.371.457 3.2.686 4.8.457.457 0 .686-.228 1.143-.228l.228.228s.229 0 .229.229c.228.229.228.686.457 1.143 0 .228 0 .457.229.686v.228c.228.457.457.457.914.457.228-.228.457-.457.228-.914v-.229c0-.228-.228-.228-.228-.457-.229-.457-.457-.685-.457-.914v-.686c1.828-1.143 2.971-2.743 3.657-4.571h.228s.23-.229.458-.229.685.229 1.142.229c.23 0 .458.228.686.228h.229c.457 0 .685-.228.914-.457 0-.228-.229-.685-.457-.685h-.914c-.458 0-.915 0-1.143-.23-.229 0-.229-.228-.229-.228h-.228c.228-.914 0-2.057-.229-2.971-.229-.914-.686-2.057-1.143-2.743l.229-.228c0-.23 0-.23.228-.458.229-.228.457-.457.915-.685.228 0 .457-.229.457-.229h.228c.229-.228.457-.686.229-.914-.229-.229-.686-.229-.914 0h-.229l-.457.457c-.229.229-.686.686-.914.686h-.458l-.228.228a8.778 8.778 0 00-5.257-2.514v-.229l-.229-.228V5.052c-.457-.686-.686-1.143-1.143-1.143zm-.685 5.028l-.229 3.429a.492.492 0 01-.457.457h-.229l-2.743-2.057c.915-.914 1.83-1.371 3.2-1.829h.458zm1.6 0c1.371.229 2.742.915 3.885 1.829l-2.743 1.829c-.228.228-.685.228-.685 0l-.229-.23-.228-3.428zm-6.4 3.2l2.514 2.286c.228.229.228.457 0 .686l-.229.228-3.2.915c-.228-1.6 0-2.972.915-4.115zm11.2 0c.457.686.685 1.372.914 2.058.228.685.228 1.37.228 2.057l-3.2-.915c-.228 0-.457-.457-.457-.685 0-.229 0-.229.229-.229l2.286-2.286zm-6.172 2.286h.914l.686.686-.228.914-.915.457-.914-.457-.229-.914.686-.686zm3.2 2.743c.229 0 .229 0 0 0l3.429.457c-.457 1.372-1.372 2.514-2.743 3.429l-1.372-3.2c.23-.229.23-.457.686-.686h0zm-5.486 0c.23 0 .458.229.458.457v.457l-1.372 3.2c-1.143-.685-2.057-1.828-2.743-3.428l3.657-.686zm2.743 1.371h.229l.228.229 1.6 2.971c-.228 0-.457.229-.685.229-1.143.229-2.515.229-3.657-.229l1.6-2.971c.457 0 .457-.229.685-.229h0z"
                    fill="#FFF"
                    stroke="#FFF"
                    stroke-width="0.25"
                  />
                </g>
              </svg>
            </span>
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="app-aws-code-deploy"
                  style="opacity: 0.5;"
                >
                  <svg
                    height="16"
                    viewBox="0 0 28 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                    >
                      <path
                        d="M4 26l-4-1.732V6.732L4 5z"
                        fill="#4B612C"
                      />
                      <path
                        d="M18 22.536L3 26V5l15 3.464z"
                        fill="#759C3E"
                      />
                      <path
                        d="M7 12.8l6.781-.8.219.2v6.6l-.219.2L7 18.2z"
                        fill="#4B612C"
                      />
                      <path
                        d="M28 11.25l-6.682.75L7 9.5 14.398 7z"
                        fill="#3C4929"
                      />
                      <path
                        d="M27 21.667L20.318 21 6 23.222 13.875 25z"
                        fill="#B7CA9D"
                      />
                      <path
                        d="M7 28.786L13.781 32 14 24.714 7 23z"
                        fill="#4B612C"
                      />
                      <path
                        d="M26 25.714L14 32v-7.633L26 21z"
                        fill="#759C3E"
                      />
                      <path
                        d="M7 3.214L14 0v7.286L7 9z"
                        fill="#4B612C"
                      />
                      <path
                        d="M27.25 18.667L13 20.3v-8.167L27.25 14zm0-7L13 8.167V.233l14.25 6.534z"
                        fill="#759C3E"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="service-aws-lamda"
                  style="opacity: 0.5;"
                >
                  <svg
                    height="16"
                    viewBox="0 0 12 14"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M.3 11.1l.7.4.1-.2V2.6L.3 3z"
                      fill="#9d5025"
                    />
                    <path
                      d="M2.5 3l-1.4-.4v8.8l1.4-.3z"
                      fill="#f68536"
                    />
                    <path
                      d="M6.8 3.6l1-.5 3.3 1.3-.9.1z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M6.8 10.4l1 .5 3.3-1.3-.9-.1z"
                      fill="#fbbf93"
                    />
                    <path
                      d="M7 9l1.7.2.1-.2V4.8L7 5.1zM1.9 2.2L3 1.6l.1.2v10.3l-.1.3-1.1-.5z"
                      fill="#9d5025"
                    />
                    <path
                      d="M5.2 11.7l-2.2.7V1.6l2.2.7z"
                      fill="#f68536"
                    />
                    <path
                      d="M4.3 13.1l1.7.8.2-.2V.4L6 .1 4.3 1zm5.8-8.6l.9-.1.1.1v5l-.1.2-.9-.1z"
                      fill="#9d5025"
                    />
                    <g
                      fill="#f68536"
                    >
                      <path
                        d="M8.8 4.8v4.4L10.6 7z"
                      />
                      <path
                        d="M11 2.6L6 .1v13.8l5.7-2.9V3zm0 7.1l-3.3 1V3.4l3.3 1z"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="main-service-ami"
                  style="opacity: 0.5;"
                >
                  <svg
                    height="16"
                    viewBox="0 0 12 14"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <mask
                      height="5"
                      id="main-service-ami_svg__a"
                      maskUnits="userSpaceOnUse"
                      width="6"
                      x="0"
                      y="0"
                    >
                      <path
                        d="M0 0h6v5H0z"
                        fill="#fff"
                      />
                    </mask>
                    <mask
                      height="4.9"
                      id="main-service-ami_svg__b"
                      maskUnits="userSpaceOnUse"
                      width="5.7"
                      x="0"
                      y="0"
                    >
                      <path
                        d="M0 0h5.7v5H0z"
                        fill="#fff"
                      />
                    </mask>
                    <mask
                      height="2"
                      id="main-service-ami_svg__c"
                      maskUnits="userSpaceOnUse"
                      width="11.5"
                      x="0"
                      y="0"
                    >
                      <path
                        d="M0 0h11.5v2H0z"
                        fill="#fff"
                      />
                    </mask>
                    <path
                      d="M.1 0c.6.3 1.2.6 1.8.8 1.3.6 2.6 1.3 3.9 1.9.1.2.2.3.2.5v1.6c0 .1 0 .2-.1.2-1.8-.4-3.5-.9-5.3-1.3-.2 0-.4 0-.5-.2v-.3V.3C0 .2 0 .1.1 0"
                      fill="#fb862e"
                      mask="url(#main-service-ami_svg__a)"
                      transform="translate(5.634 .02)"
                    />
                    <path
                      d="M5.7 0v3.5c0 .1-.1.1-.2.1-1.7.5-3.4.9-5.1 1.3-.1 0-.3.1-.4 0V3s0-.1.2-.2C2 1.9 3.8 1 5.7 0c-.1 0 0 0 0 0"
                      fill="#a0501e"
                      mask="url(#main-service-ami_svg__b)"
                      transform="translate(.042 .02)"
                    />
                    <path
                      d="M.1 1.4C.9 1.2 1.8 1 2.6.8c1-.2 2-.5 3-.7h.1c.7 0 1.3.2 1.9.3 1.2.3 2.5.6 3.7.9.1 0 .2 0 .2.1-1.2.1-2.4.2-3.7.4-.6.1-1.3.2-2 .2-.4.1-.8 0-1.3-.1-1.2-.1-2.3-.2-3.5-.3-.3-.1-.6-.1-.9-.2-.1.1-.1.1 0 0-.1 0-.1 0 0 0"
                      fill="#6e3915"
                      mask="url(#main-service-ami_svg__c)"
                      transform="translate(0 3.55)"
                    />
                    <path
                      d="M8.7 8.6c0 .2-.1.2-.3.3-.8.1-1.7.3-2.5.4h-.1c-.1 0-.1-.1-.1-.2V6.2c0-.1 0-.2.1-.3.6 0 1.2.1 1.9.1.3 0 .6 0 .9.1.1 0 .2 0 .2.1.1.1.1.1.1.2v1.9c-.1.1-.1.3-.2.3"
                      fill="#fb862e"
                    />
                    <path
                      d="M5.7 5.9v3.5c-.6-.2-1.2-.3-1.9-.4-.3-.1-.6-.1-.9-.2-.1-.8 0-1.6 0-2.4 0-.1 0-.2.1-.2 0 0 .1 0 .1-.1.8-.1 1.6-.2 2.5-.2zM5.9 13.9c0 .1-.1.1-.1 0-.6-.3-1.1-.6-1.7-.9-.1-.1-.2-.1-.1-.2v-.6s-.1-.1-.1-.2V10.1c.1-.1.2-.1.3 0 .5.1.9.2 1.4.3.2 0 .3 0 .5.1.1.2.1.4.1.6v.8c0 .6-.1 1.2 0 1.8-.2.1-.2.1-.3.2"
                      fill="#a0501e"
                    />
                    <path
                      d="M5.9 13.9c0-.9 0-1.9.1-2.8 0-.2.1-.4 0-.6 0-.1.1-.1.1-.1.5-.1 1.1-.3 1.6-.5h.2c.1.2.1.3.1.3V12c0 .1 0 .2-.1.3v.1c.1.5-.1.7-.5.9-.5.1-1 .4-1.5.6"
                      fill="#fb862e"
                    />
                    <path
                      d="M9.6 6.2c.6.1 1.2.1 1.8.2.1 0 .1.1.1.2v1.7c0 .1 0 .1-.1.2-.6.1-1.3.2-1.9.3h-.1c.1-.3.1-.6.1-.9V6.6c.1-.2.1-.3.1-.4"
                      fill="#fb872e"
                    />
                    <path
                      d="M1.7 8.6c-.5 0-1-.2-1.5-.3-.1 0-.1-.1-.1-.1V6.4c0-.1 0-.1.1-.1.5 0 1-.1 1.5-.2.1.1.1.2.1.3v2c0 .1 0 .2-.1.2"
                      fill="#a0501e"
                    />
                    <g
                      fill="#fb862e"
                    >
                      <path
                        d="M3.9 10.1v2.1c-.3 0-.6.2-.9.3-.1 0-.2.1-.3.1-.1-.1-.1-.1-.1-.2v-2.3-.2c0-.1.1-.1.1-.1.6-.1 1.1-.2 1.7-.3h.2v.3c-.1.1-.5.1-.7.3 0-.1 0-.1 0 0M10 11.5c.1.3-.1.5-.3.6-.3.1-.5.3-.8.4-.1 0-.1-.1-.1-.2v-.8-.3-1.4s0-.1.1-.1c.4-.1.7-.3 1.1-.3 0 .2 0 .2.1.3v1.6c0 .1-.1.2-.1.2M1.7 8.6V6.4v-.2h1.2v2.7c0-.2-.1-.2-.2-.2-.4-.1-.7 0-1-.1"
                      />
                    </g>
                    <path
                      d="M8.8 9.8v2.7c-.3-.1-.6-.2-.9-.2v-2.1-.2c-.5-.1-.9-.1-1.4-.3 0-.1-.1-.2.1-.2.7 0 1.3.2 2 .3z"
                      fill="#a0501c"
                    />
                    <path
                      d="M11.5 9.1c.1 0 .1 0 .1.1V11c0 .1 0 .1-.1.1-.4.1-.8.3-1.2.4h-.1V9.6v-.3c.1-.1.1-.1.2-.1.5 0 .8-.1 1.1-.1"
                      fill="#fb872e"
                    />
                    <path
                      d="M2.7 9.8v2.7l-.9-.6c-.2-.1 0-.3-.1-.5 0-.1-.1-.1-.1-.2V9.5l.1-.1c.4.2.7.2 1 .4"
                      fill="#a0501e"
                    />
                    <path
                      d="M9.6 6.2v2.4c0 .1-.1.1-.1.1-.3 0-.5 0-.8-.1 0-.8-.1-1.6 0-2.4z"
                      fill="#a1501e"
                    />
                    <path
                      d="M6.5 9.7c.5.1.9.2 1.3.3-.6.2-1.1.3-1.7.5-.1 0-.1 0-.2.1h-.3c-.6-.1-1.1-.3-1.7-.4-.1 0-.1 0-.2-.1.3-.1.7-.1 1-.2.6-.3 1.2-.4 1.8-.2"
                      fill="#fdbd8f"
                    />
                    <path
                      d="M1.7 9.5v1.9c-.2 0-.4.1-.7.1-.2 0-.2-.1-.2-.2v-.6-1.2-.3h.3c.5-.1 1.1-.1 1.6-.1.1.2 0 .2-.2.2-.2.1-.5.2-.8.2z"
                      fill="#fb862e"
                    />
                    <path
                      d="M.8 11.5l-.6-.3c-.1 0-.1-.1-.1-.2V9.2c0-.1.1 0 .1-.1.2 0 .4 0 .6.1.1 0 .2 0 .2.1v2c-.1.1-.1.2-.2.2"
                      fill="#a0501e"
                    />
                    <path
                      d="M10.4 9.3v2c0 .1 0 .2-.1.2H10V9.7c0-.1.1-.2-.1-.2-.3 0-.7-.1-1-.1-.1 0-.2 0-.2-.1 0-.2.1-.1.2-.1h1.3c0 .1.1 0 .2.1"
                      fill="#a1501c"
                    />
                    <path
                      d="M8.7 9.3c.3.1.7.1 1 .2.1 0 .2 0 .2.1-.4 0-.8.1-1.1.2-.8-.1-1.5-.2-2.2-.3.4-.1.9-.1 1.3-.2.3-.1.5 0 .8 0M1.7 9.5s-.1 0-.2-.1c.3 0 .7-.1 1-.1.1 0 .3.1.3-.2 0 .1.2.1.3.1.6-.1 1.1.1 1.6.1h.1c-.6.3-1.2.4-1.8.5h-.3c-.3-.1-.7-.2-1-.3"
                      fill="#fdbd8f"
                    />
                    <path
                      d="M.9 9.3c-.3-.1-.5-.2-.8-.2.2-.1.5-.1.7-.1.7-.1 1.3-.1 2 .1-.2.1-.4 0-.6.1-.5 0-.9.1-1.3.1zM10.4 9.3h-.2c-.1-.1-.2 0-.2 0H9.4c-.1-.1-.2 0-.2-.1.6-.2 1.2-.1 1.9-.1.2 0 .4 0 .6.1-.6 0-.9.1-1.3.1"
                      fill="#fdbd90"
                    />
                    <path
                      d="M.9 9.3v2c0 .1 0 .2.1.2-.1 0-.1.1-.2 0 .1 0 0-.1 0-.2.1-.7.1-1.3.1-2"
                      fill="#d58954"
                    />
                    <path
                      d="M8.8 12.5v-1.2c.1.3 0 .7 0 1v.2s0 .1 0 0"
                      fill="#f19754"
                    />
                    <path
                      d="M9.1 9.1c.1.1.2 0 .2.1h-.4c0-.1.1-.1.2-.1"
                      fill="#f9ceaf"
                    />
                    <path
                      d="M9.5 9.3c.1-.1.2-.1.2 0h-.2"
                      fill="#fad2b5"
                    />
                    <path
                      d="M9.9 9.2c.1 0 .2-.1.2.1 0 0-.1 0-.2-.1 0 .1 0 .1 0 0z"
                      fill="#f9d4ba"
                    />
                    <path
                      d="M9.9 9.2c0 .1 0 .1 0 0-.1.1-.1.1-.2 0z"
                      fill="#e1bea7"
                    />
                  </svg>
                </span>
              </p>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="command-winrm"
                  style="opacity: 0.5;"
                >
                  <svg
                    height="16"
                    viewBox="0 0 14 11"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 0c-.2 0-.5 0-.7.2S2 .6 2 .9C1.3 3.8.7 6.7 0 9.7c0 .3 0 .6.2.9s.5.4.9.4H11c.3 0 .5-.1.7-.3s.3-.4.3-.6c.6-2.9 1.3-5.9 1.9-8.8.1-.3.1-.7-.1-.9s-.5-.4-.9-.4zm0 1h9.9v.1C12.3 4 11.6 7 11 9.9v.1H1v-.1C1.6 6.9 2.3 4 3 1c-.1 0 0 0 0 0zm1.8.5c-.3 0-.6.2-.7.4s-.1.6.1.9l2.4 2.6-3.8 2.7c-.2.2-.3.5-.3.7s.2.5.5.6.5.1.8-.1L8.3 6c.2-.1.3-.3.3-.5s-.1-.4-.2-.6l-3-3.2c-.2-.1-.4-.2-.6-.2zM6.7 8c-.2 0-.5.1-.6.4-.1.2-.1.5 0 .7s.4.4.7.4h2c.3 0 .5-.1.7-.4.1-.2.1-.5 0-.8-.2-.2-.5-.3-.8-.3z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
              </p>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="service-pivotal"
                  style="opacity: 0.5;"
                >
                  <svg
                    height="16"
                    viewBox="0 0 14 11"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.2 8.5c0-2.2-1.8-4-4-4s-4 1.8-4 4c0 .4 0 .7.1 1.1 0 .1.1.3.1.4h1.3c.1 0 .2-.1.2-.2v-.1c0-.1-.1-.2-.1-.2-.6-1.4 0-2.9 1.4-3.5S6 6 6.6 7.4c.3.7.3 1.5 0 2.1 0 .1-.1.2-.1.3s0 .2.1.2H7.8c.1 0 .1 0 .1-.1.1-.1.1-.2.1-.4.1-.3.2-.7.2-1z"
                      fill="#008774"
                    />
                    <path
                      d="M8.7 3.1c-2.8 0-5.1 2.3-5.1 5.1 0 .4.1.9.2 1.3 0 .1.1.3.1.4.1.1.1.1.2.1h1.1c.1 0 .2-.1.2-.2v-.1c0-.1-.1-.2-.1-.3-.7-2 .3-4.1 2.3-4.8s4 .4 4.7 2.4c.3.8.3 1.7 0 2.6 0 .1-.1.2-.1.3s0 .2.1.2H13.5c.1 0 .1 0 .1-.1s.1-.3.1-.4c.7-2.7-.9-5.5-3.6-6.2-.5-.2-.9-.3-1.4-.3z"
                      fill="#00ae9e"
                    />
                    <path
                      d="M11.6 4.5C11.6 2 9.5 0 7.1 0 4.6 0 2.5 2 2.5 4.5v.4h1.3C3.7 3.1 5 1.6 6.7 1.4c1.8-.2 3.3 1.1 3.5 2.9v.4c0 .6-.3 1.2-.6 1.7-.1.1 0 .2 0 .2h1.3c.1 0 .1 0 .2-.1.3-.6.5-1.3.5-2z"
                      fill="#008774"
                    />
                  </svg>
                </span>
              </p>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="app-aws-lambda"
                  style="opacity: 0.5;"
                >
                  <svg
                    height="16"
                    viewBox="0 0 26 27"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.706 14.587a34419.9 34419.9 0 00-3.838 5.664 4042.86 4042.86 0 01-3.574 5.266.241.241 0 01-.17.099c-1.683-.015-3.367-.033-5.05-.055-.018 0-.037-.006-.074-.011a.902.902 0 01.047-.103l3.523-5.473 3.126-4.848c1.156-1.795 2.31-3.592 3.465-5.39.17-.265.348-.525.51-.795a.329.329 0 00.034-.238c-.31-.995-.628-1.986-.945-2.978-.135-.424-.277-.847-.404-1.274-.041-.137-.109-.179-.249-.178-1.058.004-2.109.003-3.164.003-.2 0-.2 0-.2-.198 0-1.3 0-2.6-.004-3.9 0-.144.047-.176.183-.176 2.123.003 4.247.003 6.37 0a.205.205 0 01.225.151 36080.34 36080.34 0 007.279 18.34c.405 1.02.814 2.042 1.216 3.066.047.124.097.148.223.11 1.113-.346 2.228-.681 3.34-1.027.14-.043.192-.014.235.125.38 1.196.767 2.389 1.151 3.583.013.041.023.083.039.14-.08.03-.154.063-.23.084-2.53.803-5.06 1.608-7.587 2.412-.12.038-.157-.003-.197-.105-.772-1.96-1.546-3.92-2.321-5.88l-2.277-5.754-.34-.866c-.018-.049-.043-.092-.08-.168l-.262.374z"
                      fill="#FA7E14"
                    />
                  </svg>
                </span>
              </p>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModuleInfoCards Test Rendering that nothing is rendered 1`] = `<div />`;

exports[`ModuleInfoCards Test Rendering that the module info cards get selected 1`] = `
<div>
  <h1
    class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--padding-top-xlarge"
  >
    common.purpose.howToProceed
  </h1>
  <div
    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card card infoCard selected"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ce-visibility"
        >
          <svg
            fill="none"
            height="40"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 24.99h3.99V0H0v24.99zm7.98 0h3.99V7.403H7.98V24.99zm7.98-10.181v10.18h3.99V14.81h-3.99z"
              fill="#0278D5"
              opacity="0.3"
            />
            <g
              clip-path="url(#ce-visibility_svg__clip0)"
            >
              <path
                d="M30.014 27.178l-4.198-3.895c1.008-1.409 1.598-3.096 1.598-4.91 0-4.914-4.31-8.912-9.606-8.912-5.297 0-9.606 3.998-9.606 8.912 0 4.915 4.31 8.913 9.606 8.913 1.955 0 3.773-.547 5.292-1.482l4.196 3.895c.376.348.984.348 1.359 0l1.358-1.26a.846.846 0 000-1.26zm-19.89-8.805c0-3.93 3.447-7.13 7.684-7.13s7.684 3.2 7.684 7.13c0 3.932-3.447 7.13-7.684 7.13s-7.685-3.198-7.685-7.13z"
                fill="#0278D5"
              />
            </g>
            <defs>
              <clippath
                id="ce-visibility_svg__clip0"
              >
                <path
                  d="M0 0h23.054v21.39H0z"
                  fill="#fff"
                  transform="translate(8.202 9.46)"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
            >
              common.ce.cost
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
          >
            common.ce.visibility
          </p>
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
      >
        common.purpose.ce.visibilityCard.description
      </p>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card card infoCard Card--disabled"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ce-optimization"
        >
          <svg
            fill="none"
            height="40"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M31.217 12.9l-3.772-.466a9.684 9.684 0 00-1.055-2.362l2.312-2.805a.417.417 0 00-.042-.58l-2.686-2.492a.5.5 0 00-.624-.038l-3.024 2.145a11.331 11.331 0 00-2.545-.98l-.503-3.499a.465.465 0 00-.471-.383h-3.8a.464.464 0 00-.47.383l-.503 3.5c-.9.226-1.754.558-2.545.979L8.465 4.156a.501.501 0 00-.624.039L5.155 6.687a.417.417 0 00-.042.58l2.313 2.805a9.679 9.679 0 00-1.056 2.361l-3.772.467a.454.454 0 00-.412.437v3.525c0 .22.176.408.412.437l3.771.466a9.678 9.678 0 001.056 2.362l-2.312 2.806a.417.417 0 00.041.579l2.687 2.492c.092.086.213.13.336.13.101 0 .203-.03.288-.091l3.024-2.146c.791.42 1.645.752 2.545.98l.503 3.499c.031.22.233.383.47.383h3.8c.238 0 .44-.163.47-.383l.503-3.499a11.33 11.33 0 002.546-.98l3.023 2.146c.086.061.188.09.289.09a.494.494 0 00.336-.128l2.686-2.493a.417.417 0 00.042-.579l-2.312-2.805a9.682 9.682 0 001.055-2.362l3.772-.467a.454.454 0 00.412-.437v-3.525a.453.453 0 00-.412-.437zm-14.31 6.165c-2.36 0-4.274-1.775-4.274-3.965s1.914-3.966 4.274-3.966c2.361 0 4.274 1.775 4.274 3.966 0 2.19-1.913 3.965-4.274 3.965z"
              fill="#0278D5"
              opacity="0.3"
            />
            <path
              d="M1.71 20.136l5.428 5.035 8.684-8.057 4.342 4.029L39.703 1"
              stroke="#0278D5"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
        </span>
        <div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
            >
              common.ce.cost
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
          >
            common.ce.optimization
          </p>
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
      >
        common.purpose.ce.optimizationCard.description
      </p>
    </div>
  </div>
</div>
`;

exports[`ModuleInfoCards Test Rendering that the module info cards render 1`] = `
<div>
  <h1
    class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--padding-top-xlarge"
  >
    common.purpose.howToProceed
  </h1>
  <div
    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card card infoCard"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ce-visibility"
        >
          <svg
            fill="none"
            height="40"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 24.99h3.99V0H0v24.99zm7.98 0h3.99V7.403H7.98V24.99zm7.98-10.181v10.18h3.99V14.81h-3.99z"
              fill="#0278D5"
              opacity="0.3"
            />
            <g
              clip-path="url(#ce-visibility_svg__clip0)"
            >
              <path
                d="M30.014 27.178l-4.198-3.895c1.008-1.409 1.598-3.096 1.598-4.91 0-4.914-4.31-8.912-9.606-8.912-5.297 0-9.606 3.998-9.606 8.912 0 4.915 4.31 8.913 9.606 8.913 1.955 0 3.773-.547 5.292-1.482l4.196 3.895c.376.348.984.348 1.359 0l1.358-1.26a.846.846 0 000-1.26zm-19.89-8.805c0-3.93 3.447-7.13 7.684-7.13s7.684 3.2 7.684 7.13c0 3.932-3.447 7.13-7.684 7.13s-7.685-3.198-7.685-7.13z"
                fill="#0278D5"
              />
            </g>
            <defs>
              <clippath
                id="ce-visibility_svg__clip0"
              >
                <path
                  d="M0 0h23.054v21.39H0z"
                  fill="#fff"
                  transform="translate(8.202 9.46)"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
            >
              common.ce.cost
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
          >
            common.ce.visibility
          </p>
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
      >
        common.purpose.ce.visibilityCard.description
      </p>
    </div>
    <div
      class="bp3-card bp3-elevation-0 Card--card card infoCard Card--disabled"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-bottom-large"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ce-optimization"
        >
          <svg
            fill="none"
            height="40"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M31.217 12.9l-3.772-.466a9.684 9.684 0 00-1.055-2.362l2.312-2.805a.417.417 0 00-.042-.58l-2.686-2.492a.5.5 0 00-.624-.038l-3.024 2.145a11.331 11.331 0 00-2.545-.98l-.503-3.499a.465.465 0 00-.471-.383h-3.8a.464.464 0 00-.47.383l-.503 3.5c-.9.226-1.754.558-2.545.979L8.465 4.156a.501.501 0 00-.624.039L5.155 6.687a.417.417 0 00-.042.58l2.313 2.805a9.679 9.679 0 00-1.056 2.361l-3.772.467a.454.454 0 00-.412.437v3.525c0 .22.176.408.412.437l3.771.466a9.678 9.678 0 001.056 2.362l-2.312 2.806a.417.417 0 00.041.579l2.687 2.492c.092.086.213.13.336.13.101 0 .203-.03.288-.091l3.024-2.146c.791.42 1.645.752 2.545.98l.503 3.499c.031.22.233.383.47.383h3.8c.238 0 .44-.163.47-.383l.503-3.499a11.33 11.33 0 002.546-.98l3.023 2.146c.086.061.188.09.289.09a.494.494 0 00.336-.128l2.686-2.493a.417.417 0 00.042-.579l-2.312-2.805a9.682 9.682 0 001.055-2.362l3.772-.467a.454.454 0 00.412-.437v-3.525a.453.453 0 00-.412-.437zm-14.31 6.165c-2.36 0-4.274-1.775-4.274-3.965s1.914-3.966 4.274-3.966c2.361 0 4.274 1.775 4.274 3.966 0 2.19-1.913 3.965-4.274 3.965z"
              fill="#0278D5"
              opacity="0.3"
            />
            <path
              d="M1.71 20.136l5.428 5.035 8.684-8.057 4.342 4.029L39.703 1"
              stroke="#0278D5"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
        </span>
        <div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main title StyledProps--font-xsmall StyledProps--color StyledProps--color-black"
            >
              common.ce.cost
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
          >
            common.ce.optimization
          </p>
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-small StyledProps--padding-bottom-small"
      >
        common.purpose.ce.optimizationCard.description
      </p>
    </div>
  </div>
</div>
`;
